--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
 h1 {
-  font-size: 30px;
+  font-size: 40px;
   color: blue;
   margin-bottom: 100px;
 }
 
 .output {
   color: red;
+}
+
+p {
+  font-size: 20px;
+  color: rgb(216, 219, 34);
+  margin-bottom: 50px;
 }
